--- a/sdk/api/version-service.mdx
+++ b/sdk/api/version-service.mdx
@@ -39,10 +39,9 @@ version = galtea.versions.create(
     - **dataset_uri**: URI to the dataset
     - **description**: Version description
     - **endpoint**: API endpoint of the version
-    - **foundational_model**: Base model information
+    - **model**: The id of the model used in the version. The models are listed in the [model's page of the platform](https://platform.galtea.ai/models).
     - **guardrails**: Guardrails configuration
-    - **provider**: Model provider
-    - **system_prompt**: Default system prompt of the model
+    - **system_prompt**: The system prompt used for this version
 </ResponseField>
 
 ## Listing Versions
