add new evaluation param to metric service in sdk

--- a/sdk/api/metrics-service.mdx
+++ b/sdk/api/metrics-service.mdx
@@ -27,8 +27,28 @@ metric = galtea.metrics.create(
   The name of the metric.
 </ResponseField>
 
-<ResponseField name="criteria" type="string" required>
+<ResponseField name="criteria" type="string">
   The criteria for the metric.
+</ResponseField>
+
+<ResponseField name="evaluation_steps" type="list[string]">
+  The evaluation steps for the metric.
+  <Note>
+    You need to provide **either** *Criteria* **or** *Evaluation Steps*, but not both. Your choice depends on your preferred evaluation approach.
+  </Note>
+</ResponseField>
+
+<ResponseField name="evaluation_parameters" type="list[string]">
+  The evaluation parameters for the metric. possible values are:
+  - **input**: The original query or prompt sent to your product
+  - **expected output**: The expected output or ideal response for the test case
+  - **actual output**: The actual output produced by the product
+  - **retrieval context**: The context retrieved by your RAG system that was used to generate the actual output
+  - **context**: Additional background information provided with the input and related to the grodun truth
+  <Note>
+    Available parameters that can be referenced in your evaluation criteria or steps to perform consistent assessments. Each parameter represents a specific component of the evaluation process that will be analyzed during metric calculation.
+    If not provided, only "input" will be used.
+  </Note>
 </ResponseField>
 
 ## Listing Metrics
