--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -54,7 +54,7 @@ When creating a metric type in Galtea, you'll need to provide the following info
     </thead>
     <tbody>
       <tr>
-        <td>**Input**</td>
+        <td>\***Input**</td>
         <td>The original query or prompt sent to your product</td>
       </tr>
       <tr>
@@ -75,6 +75,10 @@ When creating a metric type in Galtea, you'll need to provide the following info
       </tr>
     </tbody>
   </table>
+
+  <Note>
+    "Input will always need to be part of the evaluation params.
+  </Note>
 
   <Info>
     You can directly reference these parameters in your criteria or evaluation steps. For example: "Evaluate if the **Actual Output** contains factually correct information that aligns with verified sources in the **Retrieval Context**."
