--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -155,7 +155,8 @@ Metrics in Galtea define the criteria by which your product's outputs will be ev
 ```python
 metric = galtea.metrics.create(
     name="accuracy_v1",
-    criteria="Determine whether the actual output is equivalent to the expected output."
+    criteria="Determine whether the 'actual output' is equivalent to the 'expected output'."
+    evaluation_parameters=["input", "expected output", "actual output"],
 )
 ```
 
