--- a/sdk/integrations/github-actions.mdx
+++ b/sdk/integrations/github-actions.mdx
@@ -91,11 +91,7 @@ GALTEA_COMPLETENESS_METRIC_NAME = os.getenv("GALTEA_COMPLETENESS_METRIC_NAME")
 product = galtea.products.get(PRODUCT_ID)
 version = galtea.versions.create(
     name=f"v1.X-{os.getenv('GITHUB_SHA')}",
-    product_id=PRODUCT_ID,
-    optional_props={
-        "description": "example description",
-        "endpoint": "http://34.241.62.165:8000/v1/chat"
-    }
+    product_id=PRODUCT_ID
 )
 test = galtea.tests.get_by_name(TEST_NAME)
 test_cases = galtea.test_cases.list(test.id)
@@ -105,7 +101,6 @@ metrics = [
 ]
 evaluation = galtea.evaluations.create(test_id=test.id, version_id=version.id)
 for test_case in test_cases:
-
     galtea.evaluation_tasks.create(
       metrics=metrics,
       evaluation_id=evaluation.id,
