put variables that are not sensitive data within vars

--- a/sdk/integrations/github-actions.mdx
+++ b/sdk/integrations/github-actions.mdx
@@ -47,9 +47,9 @@ jobs:
     env:
       GALTEA_API_KEY: ${{ secrets.GALTEA_API_KEY }}
       GALTEA_PRODUCT_ID: ${{ vars.GALTEA_PRODUCT_ID }}
-      GALTEA_TEST_NAME: ${{ secrets.GALTEA_TEST_NAME }}
-      GALTEA_ACCURACY_METRIC_NAME: ${{ secrets.GALTEA_ACCURACY_METRIC_NAME }}
-      GALTEA_COMPLETENESS_METRIC_NAME: ${{ secrets.GALTEA_COMPLETENESS_METRIC_NAME }}
+      GALTEA_TEST_NAME: ${{ vars.GALTEA_TEST_NAME }}
+      GALTEA_ACCURACY_METRIC_NAME: ${{ vars.GALTEA_ACCURACY_METRIC_NAME }}
+      GALTEA_COMPLETENESS_METRIC_NAME: ${{ vars.GALTEA_COMPLETENESS_METRIC_NAME }}
       GITHUB_SHA: ${{ github.sha }}
     runs-on: ubuntu-latest
     steps:
