--- a/sdk/api/metrics-service.mdx
+++ b/sdk/api/metrics-service.mdx
@@ -40,19 +40,24 @@ metric = galtea.metrics.create(
 </ResponseField>
 
 <ResponseField name="evaluation_parameters" type="list[string]">
-  The evaluation parameters that have been used to formulate the criteria or evaluation steps. possible values are:
+    Standard parameters that define the inputs and outputs available during the evaluation process. These parameters should be explicitly mentioned in your evaluation criteria or steps to ensure they're taken into account during assessment.
   - **input**: The original query or prompt sent to your product. This should always be provided.
   - **expected output**: The expected output or ideal response for the test case
   - **actual output**: The actual output produced by the product
   - **retrieval context**: The context retrieved by your RAG system that was used to generate the actual output
   - **context**: Additional background information provided with the input and related to the grodun truth
   <Note>
-    "Input will always need to be part of the evaluation params.
+    "Input" will always need to be part of the evaluation params.
   </Note>
 
   <Info>
     You can directly reference these parameters in your criteria or evaluation steps. For example: "Evaluate if the **Actual Output** contains factually correct information that aligns with verified sources in the **Retrieval Context**."
   </Info>
+
+  <Warning>
+    To ensure accurate evaluation results, include only those parameters in your `evaluation_parameters` list that you've explicitly referenced in your criteria or evaluation steps.
+    You may refer to some parameters by other descriptive names like 'response' instead of 'actual output' and that is ok but you also need to include actual output to the evaluation_params list.
+  </Warning>
 </ResponseField>
 
 ## Listing Metrics
