--- a/sdk/api/metrics-service.mdx
+++ b/sdk/api/metrics-service.mdx
@@ -28,18 +28,7 @@ metric = galtea.metrics.create(
   The name of the metric.
 </ResponseField>
 
-<ResponseField name="criteria" type="string">
-  The criteria for the metric.
-</ResponseField>
-
-<ResponseField name="evaluation_steps" type="list[string]">
-  The evaluation steps for the metric.
-  <Note>
-    You need to provide **either** *Criteria* **or** *Evaluation Steps*, but not both. Your choice depends on your preferred evaluation approach.
-  </Note>
-</ResponseField>
-
-<ResponseField name="evaluation_parameters" type="list[string]">
+<ResponseField name="evaluation_parameters" type="list[string]" required>
     Standard parameters that define the inputs and outputs available during the evaluation process. These parameters should be explicitly mentioned in your evaluation criteria or steps to ensure they're taken into account during assessment.
   - **input**: The original query or prompt sent to your product. This should always be provided.
   - **expected output**: The expected output or ideal response for the test case
@@ -56,9 +45,22 @@ metric = galtea.metrics.create(
 
   <Warning>
     To ensure accurate evaluation results, include only those parameters in your `evaluation_parameters` list that you've explicitly referenced in your criteria or evaluation steps.
-    You may refer to some parameters by other descriptive names like 'response' instead of 'actual output' and that is ok but you also need to include actual output to the evaluation_params list.
+    You may refer to some parameters by other descriptive names like 'response' instead of 'actual output' and that is ok but you would also need to include actual output in the evaluation_params list.
   </Warning>
 </ResponseField>
+
+<ResponseField name="criteria" type="string">
+  The criteria for the metric.
+</ResponseField>
+
+<ResponseField name="evaluation_steps" type="list[string]">
+  The evaluation steps for the metric.
+  <Note>
+    You need to provide **either** *Criteria* **or** *Evaluation Steps*, but not both. Your choice depends on your preferred evaluation approach.
+  </Note>
+</ResponseField>
+
+
 
 ## Listing Metrics
 
