--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -13,9 +13,9 @@ Quality tests in Galtea are designed to evaluate the quality, accuracy, and corr
 You can create quality tests in Galtea through two methods:
 
 <Tabs>
-  <Tab title="Generate from Ground Truth">
+  <Tab title="Generate from Knowledge Base">
     <Steps>
-      <Step title="Prepare your ground truth file">
+      <Step title="Prepare your knowledge base file">
         Create a file containing all the information that the Product should **know and adhere to**
       </Step>
       <Step title="Configure the test">
@@ -25,7 +25,7 @@ You can create quality tests in Galtea through two methods:
         </Info>
       </Step>
       <Step title="Generate the test">
-        Galtea will process the Ground Truth and generate a *Test File* and *Test Cases* for you
+        Galtea will process the Knowledge Base and generate a *Test File* and *Test Cases* for you
       </Step>
     </Steps>
   </Tab>
