--- a/concepts/product/test/red-teaming-tests.mdx
+++ b/concepts/product/test/red-teaming-tests.mdx
@@ -13,9 +13,9 @@ Red teaming tests in Galtea are designed to evaluate the security, safety, and b
 You can create red teaming tests in Galtea through two methods:
 
 <Tabs>
-  <Tab title="Generate from Ground Truth">
+  <Tab title="Generate from Knowledge Base">
     <Steps>
-      <Step title="Prepare your ground truth file">
+      <Step title="Prepare your knowledge base file">
         Create a file with examples of harmful content or sensitive topic areas you want to test
       </Step>
       <Step title="Configure the test">
@@ -25,7 +25,7 @@ You can create red teaming tests in Galtea through two methods:
         </Info>
       </Step>
       <Step title="Generate the test">
-        Galtea will process the Ground Truth and generate a *Test File* and *Test Cases* with adversarial inputs for you
+        Galtea will process the Knowledge Base and generate a *Test File* and *Test Cases* with adversarial inputs for you
       </Step>
     </Steps>
   </Tab>
