--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -50,7 +50,7 @@ test = galtea.tests.create(
     name="example-test-tutorial",
     type="QUALITY",
     product_id=product.id,
-    ground_truth_file_path="path/to/knowledge_file.pdf"
+    ground_truth_file_path="path/to/knowledge_file.pdf" # The ground truth is also known as as the knowledge base.
 )
 ```
 
