add example of use

--- a/sdk/api/test-service.mdx
+++ b/sdk/api/test-service.mdx
@@ -21,7 +21,8 @@ test = galtea.tests.create(
     name="example-test-tutorial",
     type="QUALITY",
     product_id="YOUR_PRODUCT_ID",
-    ground_truth_file_path="path/to/knowledge_file.pdf"
+    ground_truth_file_path="path/to/knowledge_file.pdf",
+    language='english'
 )
 ```
 
