add documentation regarding custom metrics

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -214,6 +214,15 @@ The following table highlights the key differences between evaluation criteria a
   </tbody>
 </table>
 
+## Custom Metrics
+
+You have the flexibility to create custom metrics tailored to your specific use cases and evaluation preferences.
+This feature enables you to define a metric with a name, conduct evaluations locally, and directly assign scores.
+
+<Info>
+  The platform cannot automatically evaluate custom metrics, as it lacks the necessary information. Therefore, you are responsible for uploading the evaluation results to visualize charts and data based on these metrics.
+</Info>
+
 ## Related Concepts
 
 <CardGroup cols={2}>
