--- a/sdk/examples/create-custom-evaluation.mdx
+++ b/sdk/examples/create-custom-evaluation.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Run Evaluations'
-description: "Learn how to create and run evaluations using the SDK"
+title: 'Run evaluation with custom metrics'
+description: "Learn how to create and run evaluations for custom metrics using the SDK"
 icon: "badge-check"
 ---
 
@@ -28,7 +28,7 @@ This is how to create an evaluation:
     An evaluation links a specific version of your product to a test. This establishes the framework for running individual evaluation tasks.
   </Info>
 
-## Running Evaluation Tasks
+## Running Evaluation For Custom metrics
 
 Once you've created an evaluation, you can run [evaluation tasks](/concepts/product/evaluation/task):
 
@@ -47,14 +47,15 @@ for test_case in test_cases:
     timeBeforeCall = datetime.now()
     response = your_product_function(test_case.input, test_case.context, retrieval_context)
     timeAfterCall = datetime.now()
-    
+
     # Run evaluation task
     galtea.evaluation_tasks.create(
-        metrics=["accuracy_v1", "relevance_v1", "context_accuracy"],
+        metrics=["custom_metric_accuracy"],
         evaluation_id=evaluation.id,
         test_case_id=test_case.id,
         actual_output=response.output,
-        retrieval_context=[retrieval_context],  # Include retrieved context for evaluation
+        score=get_score_for_custom_metric(response.output), # local function that will get a score between 0.0 and 1.0 based on the response of the LLM and your definition of the metric. 
+        retrieval_context=[retrieval_context],
         ###################### Optional Parameters ######################
         latency=(timeAfterCall - timeBeforeCall).total_seconds() * 1000,
         usage_info={
@@ -80,68 +81,3 @@ print("All evaluation tasks submitted")
   The `latency` and `usage_info` parameters are optional but highly recommended to be used.
   They can be used to track the performance in latency and costs of your product.
 </Info>
-
-### Customized Test Cases for Evaluation Tasks
-
-If you want to fully customize the Evaluation Task, maybe because your Test File does not follow Galtea's format thus the test cases have not been created, you can load the test cases from the file and set them in the evaluation task in a similar way:
-
-```python
-import pandas as pd
-# Load your test data
-test = galtea.tests.get(test_id="YOUR_TEST_ID")
-test_file_path = galtea.tests.download(test, "path/to/your/directory")
-df = pd.read_csv(json_file_path)
-
-# Process all test instances
-for index, row in df.iterrows():
-    # Retrieve relevant context for RAG
-    retrieval_context = your_retriever_function(row['input'])
-    
-    # Your product's actual response to the input
-    actual_output = your_product_function(row['input'], retrieval_context)
-    
-    # Run evaluation task
-    galtea.evaluation_tasks.create(
-        metrics=["accuracy_v1", "relevance_v1", "context_accuracy"],
-        evaluation_id=evaluation.id,
-        input=row['input'],
-        actual_output=actual_output,
-        expected_output=row['expected_output'],
-        context=row['context'],
-        retrieval_context=[retrieval_context],  # Include retrieved context for evaluation
-    )
-print("All evaluation tasks submitted")
-```
-
-<Warning>
-  This method is only recommended for advanced users who need to customize the evaluation tasks. For most cases, using the test cases provided by the test is the best approach.
-
-  Using this will limit the acces to analysis tools and metrics that are available when using the standard test cases.
-</Warning>
-
-## Retrieving Evaluation Results
-
-After running evaluation tasks, you can retrieve the results:
-
-```python
-# Get all tasks for an evaluation
-tasks = galtea.evaluation_tasks.list(evaluation_id=evaluation.id)
-
-# Analyze results
-total_score = 0
-for task in tasks:
-    task_detail = galtea.evaluation_tasks.get(task.id)
-    total_score += task_detail.score
-    print(f"Task {task.id}: Score = {task_detail.score}")
-
-avg_score = total_score / len(tasks) if tasks else 0
-print(f"Average evaluation score: {avg_score}")
-```
-
-## Next Steps
-
-<CardGroup cols={2}>
-  <Card title="API Reference" icon="code" href="/sdk/api/evaluation-service">
-    View the complete Evaluation Service API reference
-  </Card>
-</CardGroup>
