improve optional  property model_id documentation

--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -40,8 +40,8 @@ When creating a version in Galtea, you'll need to provide the following informat
   A description of the version, typically highlighting what makes it different from other versions. **Example**: "Improved summarization algorithm with better fact retention"
 </ResponseField>
 
-<ResponseField name="Model" type="ID (text)">
-  The [model](/concepts/model) used in the version. **Example**: "GPT-4", "Claude 2", or "Llama 2-70B"
+<ResponseField name="Model ID" type="ID (text)">
+  The [model](/concepts/model) ID used in the version. You can search for models like: "GPT-4", "Claude 2", or "Llama 2-70B" in the platform and then grab their ID to associate it with the version.
 
   This is used to calculate the cost of the inference for the version during [evaluation tasks](/concepts/product/evaluation/task).
 </ResponseField>
