--- a/sdk/api/version-service.mdx
+++ b/sdk/api/version-service.mdx
@@ -39,7 +39,7 @@ version = galtea.versions.create(
     - **dataset_uri**: URI to the dataset
     - **description**: Version description
     - **endpoint**: API endpoint of the version
-    - **model**: The id of the model used in the version. The models are listed in the [model's page of the platform](https://platform.galtea.ai/models).
+    - **model_id**: The id of the model used in the version. The models are listed in the [model's page of the platform](https://platform.galtea.ai/models).
     - **guardrails**: Guardrails configuration
     - **system_prompt**: The system prompt used for this version
 </ResponseField>
