--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -186,7 +186,7 @@ evaluation = galtea.evaluations.create(
 )
 
 # Load your test cases
-test_cases = galtea.tests_cases.list(test_id=test.id)
+test_cases = galtea.test_cases.list(test_id=test.id)
 
 # Evaluate all test cases
 for test_case in test_cases:
