--- a/sdk/api/test-case-service.mdx
+++ b/sdk/api/test-case-service.mdx
@@ -17,7 +17,7 @@ This Service is exposed by the `galtea.tests` object and we will further explore
 This method allows you to create a test case for your test.
 
 ```python
-test_case = galtea.tests_cases.create(
+test_case = galtea.test_cases.create(
     test_id="YOUR_TEST_ID",
     input="What is the capital of France?",
     expected_output="Paris",
