--- a/sdk/examples/create-evaluation-with-custom-metric.mdx
+++ b/sdk/examples/create-evaluation-with-custom-metric.mdx
@@ -36,7 +36,7 @@ For efficiency, you can process *multiple evaluation tasks at once* using a loop
 
 ```python
 # Load your test cases
-test_cases = galtea.tests_cases.list(test_id="YOUR_TEST_ID")
+test_cases = galtea.test_cases.list(test_id="YOUR_TEST_ID")
 
 # Evaluate all test cases
 for test_case in test_cases:
