--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -90,7 +90,7 @@ evaluation = galtea.evaluations.create(
 )
 
 # Get test cases from the test
-test_cases = galtea.tests_cases.list(test_id=test.id)
+test_cases = galtea.test_cases.list(test_id=test.id)
 
 # Run evaluation tasks for each test case
 for test_case in test_cases:
