--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -191,7 +191,7 @@ test_cases = galtea.test_cases.list(test_id=test.id)
 # Evaluate all test cases
 for test_case in test_cases:
     # Your product's actual response to the input
-    actual_output = your_product_function(test_cases.input, test_cases.context)
+    actual_output = your_product_function(test_case.input, test_case.context)
     
     # Run evaluation task
     galtea.evaluation_tasks.create(
