use evaluation_params instead of evaluation_parameters

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -69,7 +69,7 @@ When creating a metric type in Galtea, you'll need to provide the following info
   </Info>
 
   <Warning>
-    To ensure accurate evaluation results, include only those parameters in your `evaluation_parameters` list that you've explicitly referenced in your criteria or evaluation steps.
+    To ensure accurate evaluation results, include only those parameters in your `evaluation_params` list that you've explicitly referenced in your criteria or evaluation steps.
     You may refer to some parameters by other descriptive names like 'response' instead of 'actual output' and that is ok but you would also need to include actual output in the evaluation_params list.
   </Warning>
 </ResponseField>
