--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -156,7 +156,7 @@ Metrics in Galtea define the criteria by which your product's outputs will be ev
 metric = galtea.metrics.create(
     name="accuracy_v1",
     criteria="Determine whether the 'actual output' is equivalent to the 'expected output'."
-    evaluation_parameters=["input", "expected output", "actual output"],
+    evaluation_params=["input", "expected output", "actual output"],
 )
 ```
 
