--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -69,7 +69,7 @@ You can create custom [Metric Types](/concepts/metric-type) tailored to your spe
 metric_self_accuracy = galtea.metrics.create(
     name="accuracy_v1",
     criteria="Determine whether the 'actual output' is equivalent to the 'expected output'."
-    evaluation_parameters=["input", "expected output", "actual output"],
+    evaluation_params=["input", "expected output", "actual output"],
 )
 ```
 
