remove expected_output as required column from custom test files

--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -133,7 +133,7 @@ Quality tests have a specific structure designed to facilitate effective evaluat
   **Example**: "What are three key provisions of the GDPR related to data subject rights?"
 </ResponseField>
 
-<ResponseField name="expected_output" type="String" required>
+<ResponseField name="expected_output" type="String">
   The expected answer to the question, serving as a benchmark for evaluation.
   **Example**: "The GDPR provides several key rights to data subjects, including: the right to access, the right to be forgotten, the right to rectification, the right to restrict processing, the right to data portability, and the right to object to processing."
 </ResponseField>
