use version_name instead of version_name

--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -119,8 +119,8 @@ The benefits of this approach include:
 - **Analysis of inputs and outputs**: You can analyze the inputs and outputs of your product in a real-world context, which can help you understand how it is being used and identify areas for improvement.
 
 
-<ResponseField name="version_id" type="string" required>
-  The ID of the version of the product you want to evaluate.
+<ResponseField name="version_name" type="string" required>
+  The name of the version you want to use for the evaluation tasks.
 </ResponseField>
 
 <ResponseField name="metrics" type="list[string]" required>
