Revert "use version_name instead of version_name"
This reverts commit 9a884534833e20e1718f35047c0047e941efe049.

--- a/sdk/examples/create-evaluation-with-production-data.mdx
+++ b/sdk/examples/create-evaluation-with-production-data.mdx
@@ -30,7 +30,7 @@ timeAfterCall = datetime.now()
 
 # Create an evaluation task from this production interaction
 evaluation_tasks = galtea.evaluation_tasks.create_from_production(
-  version_name=VERSION_NAME,
+  version_id=VERSION_ID,
   metrics=["coherence", metric.name, "answer relevancy"],
   input=user_query,
   actual_output=response,
