monitoring concept introduced

--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -108,9 +108,9 @@ evaluation_task = galtea.evaluation_tasks.create(
   However, this is not recommended for most use cases, as it reduces the consistency and comparability of evaluation results.
 </Warning>
 
-## Create Evaluation Task From Production
+## Monitoring User Interactions in Production
 
-This method allows you to create a evaluation tasks from a production environment.
+If you want to monitor the user interactions for your application in production, you can do it simply by creating an evaluation task from the `input`s that your users are introducing to your system.
 This way, you can evaluate your product using real-world data and continuously improve its performance.
 The benefits of this approach include:
 - **Real-world data**: You can evaluate your product using real-world data, which can provide more accurate insights into its performance.
