--- a/sdk/examples/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/examples/monitor-production-responses-to-user-queries.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Run evaluations with production data'
+title: 'Monitor production responses to user queries'
 description: "Learn how to create evaluation tasks from user queries in production for deeper analysis"
 icon: "badge-check"
 ---
