add new filters to documentation

--- a/snippets/changelog/2025-04-28.mdx
+++ b/snippets/changelog/2025-04-28.mdx
@@ -26,7 +26,10 @@ We’re continuously refining the platform based on your feedback. This week’s
   You can now select which metrics you are interested in, so the evaluation tasks list only shows the ones you need.
 
 - **Enhanced Evaluation List Filtering:**  
-  Easily filter evaluations by versions, evaluations, and tests.
+  Easily filter evaluations by versions, evaluations, tests and test groups.
+
+- **Enhanced Test List Filtering:**  
+  Easily filter tests by its group.
 
 - **Smart Table Sorting:**  
   When you apply a custom sort, the default (usually creation date) is automatically disabled.
