--- a/snippets/changelog/2025-04-28.mdx
+++ b/snippets/changelog/2025-04-28.mdx
@@ -3,9 +3,9 @@
 
 Real-world user interactions with your products can now be fully monitored and analyzed. Using the Galtea SDK, you can trigger evaluations in a production environment and view how different versions perform with real users. [Read more here](/sdk/api/evaluation-task-service#monitoring-user-interactions-in-production).
 
-## Improved Galtea Simulation Tests
+## Improved Galtea Red Teaming Tests
 
-Our simulation-generated tests have been upgraded—delivering higher-quality outcomes. Red teaming tests can now be directed to validate even more specific aspects of various security standards, such as OWASP, MITRE ATLAS, and NIST.
+Our simulation-generated tests have been upgraded—delivering higher-quality outcomes. Red teaming tests can now be directed to validate even more specific aspects of various security standards, such as OWASP, MITRE ATLAS, and NIST. Specifically, we have improved **jailbreak** attacks, in addition to new **financial attacks** and **toxicity** prompts.
 
 ## New Analytics Page
 
