--- a/snippets/changelog/2025-05-05.mdx
+++ b/snippets/changelog/2025-05-05.mdx
@@ -1,4 +1,12 @@
-<Update label="2025-05-05" description="Analytics Upgrades and SDK Safeguards">
+<Update label="2025-05-05" description="Analytics Upgrades and Red Teaming Test Improvements">
+## Improvements in Red Teaming Tests
+
+- **New "misuse" threat implemented**  
+  Now red teaming incorporates a new threat, misuse, which are queries that not necessaryly malicious however out-of-scope for you specific product. You can now test whether your product can successfully block these queries by marking "Mitre Atlas: Ambiguous prompts" in the threat list.
+
+- **Better "data leakage" and "toxicity" tests**  
+  The red teaming tests incorporate better your product meta data, to generate the most adequate test cases for "data leakage" and "toxicity".
+
 ## Analytics Page Upgrades
 
 We're continuing to expand the power of the Analytics page! This update introduces:
@@ -6,7 +14,7 @@ We're continuing to expand the power of the Analytics page! This update introduc
 - **Radar View for Version Comparison**  
   You can now visualize performance across multiple metrics for a single version using the brand-new radar view. It provides a quick way to understand strengths and weaknesses at a glance.
 
-- **Smarter Metric Filters**  
+- **Smarter Metric Filters**
   Filters now only show metrics that have actually been used in evaluations—removing unnecessary clutter and making it easier to find relevant data.
 
 - **Graph Tooltips**  
