improve metrics available text

--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -69,11 +69,11 @@ evaluation_task = galtea.evaluation_tasks.create(
   ```
 
   <Note>
-    Currently, this parameter is useful for these kind of default metrics available in the platform:
-    - **Role Adherence**: Measures how well the actual output adheres to a specified role.
-    - **Knowledge Retention**: Assesses the model's ability to retain and use information from previous turns in the conversation.
-    - **Conversation Completeness**: Evaluates whether the conversation has reached a natural and informative conclusion.
-    - **Conversation Relevancy**: Assesses whether each turn in the conversation is relevant to the ongoing topic and user needs.
+    Currently, this parameter can only be used with the following metrics, which available in the platform:
+      - **Role Adherence**: Measures how well the actual output adheres to a specified role.
+      - **Knowledge Retention**: Assesses the model's ability to retain and use information from previous turns in the conversation.
+      - **Conversation Completeness**: Evaluates whether the conversation has reached a natural and informative conclusion.
+      - **Conversation Relevancy**: Assesses whether each turn in the conversation is relevant to the ongoing topic and user needs.
  </Note>
 </ResponseField>
 
@@ -201,11 +201,11 @@ evaluation_task = galtea.evaluation_tasks.create_from_production(
   ]
   ```
   <Note>
-    Currently, this parameter is useful for these kind of default metrics available in the platform:
-    - **Role Adherence**: Measures how well the actual output adheres to a specified role.
-    - **Knowledge Retention**: Assesses the model's ability to retain and use information from previous turns in the conversation.
-    - **Conversation Completeness**: Evaluates whether the conversation has reached a natural and informative conclusion.
-    - **Conversation Relevancy**: Assesses whether each turn in the conversation is relevant to the ongoing topic and user needs.
+    Currently, this parameter can only be used with the following metrics, which available in the platform:
+      - **Role Adherence**: Measures how well the actual output adheres to a specified role.
+      - **Knowledge Retention**: Assesses the model's ability to retain and use information from previous turns in the conversation.
+      - **Conversation Completeness**: Evaluates whether the conversation has reached a natural and informative conclusion.
+      - **Conversation Relevancy**: Assesses whether each turn in the conversation is relevant to the ongoing topic and user needs.
  </Note>
 </ResponseField>
 
