--- a/sdk/examples/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/examples/monitor-production-responses-to-user-queries.mdx
@@ -57,7 +57,7 @@ evaluation_tasks = galtea.evaluation_tasks.create_from_production(
 
 <Info>
   The `conversation_turns` parameter allows you to create evaluation tasks with a real user conversation history.
-  For now, you can only use these default metrics for evaluating conversations:
+  Currently, this parameter can only be used with the following metrics, which available in the platform:
     - **Role Adherence**: Measures how well the actual output adheres to a specified role.
     - **Knowledge Retention**: Assesses the model's ability to retain and use information from previous turns in the conversation.
     - **Conversation Completeness**: Evaluates whether the conversation has reached a natural and informative conclusion.
