Subjectively improved legibility

--- a/sdk/api/evaluation-task-service.mdx
+++ b/sdk/api/evaluation-task-service.mdx
@@ -201,7 +201,7 @@ evaluation_task = galtea.evaluation_tasks.create_from_production(
   ]
   ```
   <Note>
-    Currently, this parameter can only be used with the following metrics, which are available to all organizations:
+    Currently, this parameter can only be used with the following metrics, which are available by default:
       - **Role Adherence**: Measures how well the actual output adheres to a specified role.
       - **Knowledge Retention**: Assesses the model's ability to retain and use information from previous turns in the conversation.
       - **Conversation Completeness**: Evaluates whether the conversation has reached a natural and informative conclusion.
